removed annogen dependency and use JDK 1.5 instead.  - Will send a mail to the list soon saying what I did and the issues with the change
Seems like a big commit but do not need to worry I check and test them carefully.